--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "repository": "https://github.com/wssgcg1213/Redrock-Protal.git",
   "author": "zeroling",
   "dependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-imagemin": "^0.9.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
